--- a/.env
+++ b/.env
@@ -1,6 +1,6 @@
 DB_USERNAME=postgres
 DB_PASSWORD=admin
-DB_DATABASE=PlayToWinORM
+DB_DATABASE=PlayToWin
 DB_HOST=localhost
 DB_PORT=5432
 DB_DIALECT=postgres
